Bug 1412249 - Fix DidComposite timing for EmptyTransaction r=nical